Prevent assignment from overlapping nav buttons

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,10 +1,12 @@
-#root {
+:root {
   --primary-color: #a0232a;
   --secondary-color: #db8b93;
   --tertiary-color: #f5c4c4;
   --prim-text: #ffffff;
   --sec-ter-text: #3b1318;
+}
 
+#root {
   margin: 0 auto;
   height: 100%;
   width: 100%;
