--- a/src/components/Assignments/Assignments.scss
+++ b/src/components/Assignments/Assignments.scss
@@ -8,5 +8,5 @@
   align-items: center;
   justify-content: center;
   gap: 2rem;
-  padding: 1rem;
+  padding: 5rem;
 }
